--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" >
+
 <head>
   <meta charset="UTF-8">
   <title>world map using d3.js</title>
@@ -12,11 +13,19 @@
 </head>
 
 <body>
-  <div id="map"></div>
+
+  <h1>Metorites on World Map</h1>
+<div id="map"></div>
   <script src='https://d3js.org/d3.v4.min.js'></script>
 <script src='https://d3js.org/topojson.v2.min.js'></script>
 
+  
+
     <script  src="js/index.js"></script>
 
+
+
+
 </body>
+
 </html>
